--- a/blk-design-system-react-master/package.json
+++ b/blk-design-system-react-master/package.json
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "axios": "^1.7.2",
     "bootstrap": "4.6.2",
     "chart.js": "2.9.4",
     "classnames": "2.3.1",
@@ -97,5 +98,4 @@
       "last 1 safari version"
     ]
   }
-
 }
