--- a/Stock-Backend/package.json
+++ b/Stock-Backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "node-schedule": "^2.1.1",
     "pg": "^8.11.5"
   }
 }
