--- a/blk-design-system-react-master/package.json
+++ b/blk-design-system-react-master/package.json
@@ -39,12 +39,15 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
     "bootstrap": "4.6.2",
     "chart.js": "2.9.4",
     "classnames": "2.3.1",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "moment": "2.29.4",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.14",
     "nouislider": "15.4.0",
     "perfect-scrollbar": "1.5.5",
     "react": ">=16.8.0",
@@ -97,5 +100,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
   }
 }
