--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
   "dependencies": {
-    "axios": "^1.7.2",
+    "assert": "^2.1.0",
+    "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "https-browserify": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.14",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.10.2",
+    "react-icons": "^5.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^6.1.11"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.24.7"
   }
 }
